--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-scripts": "^2.1.3",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.0.1"
+    "redux-saga": "^1.0.1",
+    "uuid": "^3.3.2"
   }
 }
